import Foundation

struct FeedConstants {
    static let didChangeNotification = "ImagesListServiceDidChange"
    static let photoIndex = "photoIndex"
    static let feedPath = "/photos"
    static let likePath = "/photos/id/like"
    static let page = "page"
    static let perPage = "per_page"
    static let photosPerPage = 10
}
